Fixed scrollbar issue

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-.main-cont{
+.main-cont {
     position: absolute;
     background: linear-gradient(to right, #1B1A55, #535C91, #8a92b9, #8a92b9, #535C91, #1B1A55);
     height: 100%;
@@ -20,10 +20,26 @@
     height: 400px;
     width: 600px;
     padding: 30px;
-    overflow: scroll;
-    margin-left: 30%;
-    margin-top: 12.5%;
+    overflow-x: scroll;
+    scrollbar-color: transparent transparent;
+    scrollbar-width: thin;
+
+    scrollbar-width: thin;
+    scrollbar-color: transparent transparent;
 }
+
+.cont::-webkit-scrollbar {
+    width: 6px;
+}
+
+.cont::-webkit-scrollbar-thumb {
+    background-color: transparent;
+}
+
+.cont::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
 
 .form-btns {
     border: none;
@@ -78,6 +94,6 @@
     visibility: hidden;
 }
 
-#stats ul{
+#stats ul {
     list-style: none;
 }
